# django_rep

./: .gitignore
django_project/: pyproject.toml
django_project/site_proj/: manage.py
django_project/site_proj/site_proj/: asgi.py  settings.py  urls.py  wsgi.py
django_project/site_proj/users/: forms.py  models.py  urls.py  views.py
django_project/site_proj/users/migrations/: 0001_initial.py  0002_alter_profile_avatar.py
django_project/site_proj/users/static/users/: style.css
django_project/site_proj/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  sign_up.html
django_project/site_proj/web_app/: forms.py  models.py  urls.py  views.py
django_project/site_proj/web_app/management/commands/: get_mongo_db.py  run.py  stop_db.py
django_project/site_proj/web_app/migrations/: 0001_initial.py
django_project/site_proj/web_app/static/web_app/: style.css
django_project/site_proj/web_app/templates/web_app/: add_quote.html  author.html  base.html  index.html  navbar.html  pagination.html  quote_add.html  quotes_by_tag.html
